--- a/css/layout.css
+++ b/css/layout.css
@@ -10,7 +10,7 @@
 }
 
 .section--dark {
-  background-color: #f0f0f0;
+  background-color: var(--bg-tertiary);
 }
 
 .section--medium {
